RESOLVED FIXED149960
[iOS WK2] Fix some leaks in TestRunnerWKWebView and UIScriptContext
https://bugs.webkit.org/show_bug.cgi?id=149960
Summary [iOS WK2] Fix some leaks in TestRunnerWKWebView and UIScriptContext
Simon Fraser (smfr)
Reported 2015-10-09 10:49:54 PDT
[iOS WK2] Fix some leaks in TestRunnerWKWebView and UIScriptContext
Attachments
Patch (2.54 KB, patch)
2015-10-09 10:50 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2015-10-09 10:50:22 PDT
WebKit Commit Bot
Comment 2 2015-10-09 14:35:29 PDT
Comment on attachment 262780 [details] Patch Clearing flags on attachment: 262780 Committed r190819: <http://trac.webkit.org/changeset/190819>
WebKit Commit Bot
Comment 3 2015-10-09 14:35:32 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4 2015-10-13 12:10:14 PDT
Comment on attachment 262780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=262780&action=review > Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:81 > + self.willBeginZoomingCallback = nil; > + self.didEndZoomingCallback = nil; > + self.didShowKeyboardCallback = nil; > + self.didHideKeyboardCallback = nil; > + > + self.zoomToScaleCompletionHandler = nil; > + self.showKeyboardCompletionHandler = nil; I think the best practice is to call release, not call the setter method.
Note You need to log in before you can comment on or make changes to this bug.