[iOS WK2] Fix some leaks in TestRunnerWKWebView and UIScriptContext https://bugs.webkit.org/show_bug.cgi?id=149960

Reviewed by Tim Horton.

Use adoptWK(), and null out some members (file is not using ARC).

* WebKitTestRunner/UIScriptContext/UIScriptContext.cpp:
(UIScriptContext::uiScriptComplete):
* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView dealloc]):


Canonical link: https://commits.webkit.org/168115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190819 268f45cc-cd09-0410-ab3c-d52691b4dbfc